# PricingService

./: .gitignore  CMakeLists.txt  Dockerfile  Go.Dockerfile  PricingService  PricingService.mac.py  PricingService.py  PricingService.vcxproj  Py.Dockerfile  Readme.md  build.sh  dockerbuild.sh  main.cpp  main.go
CPlusCPlus/: CMakeLists.txt  PricingService.h  main.cpp  mainGo.cpp  test.c
golang_service/: build.sh  go.mod  go.sum
golang_service/api/proto/v1/: pricing-service.proto
golang_service/cmd/client/: Main.go  Main_test.go
golang_service/cmd/server/: Main.go
golang_service/pkg/api/v1/: pricing-service.pb.go
golang_service/pkg/cmd/: server.go
golang_service/pkg/protocol/grpc/: server.go
golang_service/pkg/service/v1/: price-service.go  price-service_test.go
